Run and compile with java 16